fixed merge issues and updated version